external-trfc-shft/webserver-deploy-v1.yaml
apiVersion: v1
kind: Service
metadata:
  name: webserver-svc
  labels: 
    app: webserver
spec:
  selector:
    app: webserver
  ports:
  - name: http
    port: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webserver-v1
  labels:
    version: v1
spec:
  replicas: 2
  selector:
    matchLabels:
      app: webserver
  template:
    metadata:
      labels:
        app: webserver
        version: v1
    spec:
      containers:
      - name: webserver-cont
        image: <image-v1>
        ports:
        - containerPort: 80
