external-trfc-shft/webserver-deploy-v2.yaml
apiVersion: v1
kind: Service
metadata:
  name: webserver-svc
  labels: 
    app: webserver
spec:
  selector:
    app: webserver
  ports:
  - name: http
    port: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webserver-v2
  labels:
    version: v2
spec:
  replicas: 2
  selector:
    matchLabels:
      app: webserver
  template:
    metadata:
      labels:
        app: webserver
        version: v2
    spec:
      containers:
      - name: webserver-cont
        image: <image-v2>
        ports:
        - containerPort: 80
